--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "test": "npm run lint && npm run build && npm run build-tests && npm run test-tape-run",
     "test-tape-run": "cat test/index.html | tape-run --input=html --static=test | tap-arc",
     "build": "mkdir -p ./public && rm -rf ./public/* && tsc --project tsconfig.build.json",
-    "start": "vite",
+    "start": "concurrently --kill-others \"npx vite\" \"npx ntl functions:serve --port=9999 --debug\"",
     "preversion": "npm run lint",
     "postversion": "git push && git push --tags",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
+    "@netlify/functions": "^2.4.0",
     "@nichoth/components": "^0.9.1",
     "@nichoth/routes": "^3.0.7",
     "@preact/signals": "^1.2.1",
@@ -28,6 +29,7 @@
     "@preact/preset-vite": "^2.5.0",
     "@typescript-eslint/parser": "^5.55.0",
     "esbuild": "^0.15.18",
+    "netlify-cli": "^17.2.2",
     "postcss-nesting": "^12.0.1",
     "standardx": "^7.0.0",
     "tap-arc": "^0.3.5",
