--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nichoth/routes": "^3.0.7",
     "@preact/signals": "^1.2.1",
     "htm": "^3.1.1",
+    "ky": "^1.1.3",
     "preact": "^10.18.1",
     "route-event": "^4.1.10"
   },
@@ -28,6 +29,7 @@
     "@nichoth/tapzero": "^0.8.0",
     "@preact/preset-vite": "^2.5.0",
     "@typescript-eslint/parser": "^5.55.0",
+    "concurrently": "^8.2.2",
     "esbuild": "^0.15.18",
     "netlify-cli": "^17.2.2",
     "postcss-nesting": "^12.0.1",
