fix build script

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build-tests": "esbuild test/index.ts --bundle --format=cjs --keep-names > test/test-bundle.js",
     "test": "npm run lint && npm run build && npm run build-tests && npm run test-tape-run",
     "test-tape-run": "cat test/index.html | tape-run --input=html --static=test | tap-arc",
-    "build": "mkdir -p ./public && rm -rf ./public/* && tsc --project tsconfig.build.json",
-    "start": "concurrently --kill-others \"npx vite\" \"npx ntl functions:serve --port=9999 --debug\"",
+    "build": "mkdir -p ./public && rm -rf ./public/* && vite build",
+    "start": "concurrently --kill-others \"npx ntl functions:serve --port=9999 --debug\" \"npx vite\"",
     "preversion": "npm run lint",
     "postversion": "git push && git push --tags",
     "prepublishOnly": "npm run build"
