update author field

--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "typescript": "^5.0.2",
     "vite": "^5.0.2"
   },
-  "author": "nichoth <nichoth@gmail.com> (https://nichoth.com)",
+  "author": "nichoth <nichoth@nichoth.com> (https://nichoth.com)",
   "license": "AGPL-3.0-or-later"
 }
