--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "concurrently --kill-others \"npx ntl functions:serve --port=9999 --debug\" \"npx vite\"",
     "preversion": "npm run lint",
     "version": "auto-changelog --template keepachangelog --breaking-pattern 'BREAKING CHANGE' && git add CHANGELOG.md",
-    "postversion": "git push && git push --tags",
+    "postversion": "git push --follow-tags",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
@@ -32,7 +32,7 @@
     "@typescript-eslint/parser": "^6.12.0",
     "auto-changelog": "^2.4.0",
     "concurrently": "^8.2.2",
-    "esbuild": "^0.19.5",
+    "esbuild": "^0.19.9",
     "netlify-cli": "^17.8.1",
     "postcss-nesting": "^12.0.1",
     "standardx": "^7.0.0",
