update tap formatter

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint \"./**/*.{ts,js}\"",
     "build-tests": "esbuild test/index.ts --bundle --format=cjs --keep-names > test/test-bundle.js",
     "test": "npm run lint && npm run build && npm run build-tests && npm run test-tape-run",
-    "test-tape-run": "cat test/index.html | tape-run --input=html --static=test | tap-arc",
+    "test-tape-run": "cat test/index.html | tape-run --input=html --static=test | tap-spec",
     "build": "mkdir -p ./public && rm -rf ./public/* && vite build",
     "start": "concurrently --kill-others \"npx ntl functions:serve --port=9999 --debug\" \"npx vite\"",
     "preversion": "npm run lint",
@@ -34,14 +34,14 @@
     "auto-changelog": "^2.4.0",
     "concurrently": "^8.2.2",
     "esbuild": "^0.20.2",
-    "eslint": "^9.0.0",
+    "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "netlify-cli": "^17.22.0",
     "postcss-nesting": "^12.1.1",
-    "tap-arc": "^1.2.2",
+    "tap-spec": "^5.0.0",
     "tape-run": "^11.0.0",
     "typescript": "^5.4.4",
-    "vite": "^5.2.8"
+    "vite": "^5.2.9"
   },
   "author": "nichoth <nichoth@nichoth.com> (https://nichoth.com)"
 }
