--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@bicycle-codes/tapzero": "^0.9.2",
     "@netlify/functions": "^2.6.0",
-    "@nichoth/debug": "^0.6.7",
+    "@bicycle-codes/debug": "^0.6.8",
     "@preact/preset-vite": "^2.8.2",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.1.0",
@@ -36,12 +36,12 @@
     "esbuild": "^0.20.2",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
-    "netlify-cli": "^17.22.0",
+    "netlify-cli": "^17.23.1",
     "postcss-nesting": "^12.1.1",
     "tap-spec": "^5.0.0",
     "tape-run": "^11.0.0",
-    "typescript": "^5.4.4",
-    "vite": "^5.2.9"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11"
   },
   "author": "nichoth <nichoth@nichoth.com> (https://nichoth.com)"
 }
