--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   },
   "dependencies": {
     "@nichoth/components": "^0.16.9",
-    "@nichoth/routes": "^4.0.1",
+    "@bicycle-codes/routes": "^4.0.7",
     "@preact/signals": "^1.2.3",
     "htm": "^3.1.1",
     "ky": "^1.2.3",
     "preact": "^10.20.2",
-    "route-event": "^4.2.20"
+    "route-event": "^4.2.25"
   },
   "devDependencies": {
     "@bicycle-codes/tapzero": "^0.9.2",
