--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,8 @@
       Access-Control-Allow-Headers = "Origin, X-Requested-With, Content-Type, Accept, Authorization"
       Access-Control-Max-Age = "2592000"
       Access-Control-Allow-Credentials = "true"
-      # Cache-Control = "public,max-age=31536000,immutable"
+      # Cache-Control = "public, immutable, max-age=31536000"  # immutable paths
+      # Cache-Control = "public, max-age=0, must-revalidate"
 
 [[redirects]]
   from = "/api/*"
