--- a/package.json
+++ b/package.json
@@ -16,28 +16,31 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@nichoth/components": "^0.16.9",
     "@bicycle-codes/routes": "^4.0.7",
+    "@nichoth/components": "^0.16.9",
     "@preact/signals": "^1.2.3",
     "htm": "^3.1.1",
     "ky": "^1.2.3",
     "preact": "^10.20.2",
-    "route-event": "^5.2.3"
+    "route-event": "^5.2.3",
+    "stylelint": "^16.8.1"
   },
   "devDependencies": {
+    "@bicycle-codes/debug": "^0.6.8",
     "@bicycle-codes/tapzero": "^0.10.3",
     "@netlify/functions": "^2.6.0",
-    "@bicycle-codes/debug": "^0.6.8",
     "@preact/preset-vite": "^2.8.2",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.1.0",
     "auto-changelog": "^2.4.0",
     "concurrently": "^8.2.2",
+    "cssnano": "^7.0.4",
     "esbuild": "^0.23.0",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "netlify-cli": "^17.23.1",
     "postcss-nesting": "^12.1.1",
+    "stylelint-config-standard": "^36.0.1",
     "tap-spec": "^5.0.0",
     "tape-run": "^11.0.0",
     "typescript": "^5.4.5",
