--- a/package.json
+++ b/package.json
@@ -16,35 +16,35 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@bicycle-codes/routes": "^4.0.7",
-    "@nichoth/components": "^0.16.12",
+    "@substrate-system/routes": "^4.0.7",
+    "@nichoth/components": "^0.16.16",
     "@preact/signals": "^2.0.0",
     "htm": "^3.1.1",
-    "ky": "^1.7.2",
-    "preact": "^10.24.2",
+    "ky": "^1.7.4",
+    "preact": "^10.25.4",
     "route-event": "^6.0.0",
-    "stylelint": "^16.9.0"
+    "stylelint": "^16.13.0"
   },
   "devDependencies": {
-    "@bicycle-codes/debug": "^0.7.2",
-    "@bicycle-codes/tapzero": "^0.10.3",
+    "@substrate-system/debug": "^0.7.18",
+    "@substrate-system/tapzero": "^0.10.13",
     "@netlify/functions": "^3.0.0",
-    "@preact/preset-vite": "^2.9.1",
+    "@preact/preset-vite": "^2.9.4",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "auto-changelog": "^2.4.0",
     "concurrently": "^9.0.1",
-    "cssnano": "^7.0.4",
-    "esbuild": "^0.24.0",
+    "cssnano": "^7.0.6",
+    "esbuild": "^0.24.2",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "netlify-cli": "^18.0.0",
-    "postcss-nesting": "^13.0.0",
+    "postcss-nesting": "^13.0.1",
     "stylelint-config-standard": "^36.0.1",
     "tap-spec": "^5.0.0",
     "tape-run": "^11.0.0",
-    "typescript": "^5.6.3",
-    "vite": "^6.0.1"
+    "typescript": "^5.7.3",
+    "vite": "^6.0.7"
   },
   "author": "nichoth <nichoth@nichoth.com> (https://nichoth.com)"
 }
