--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@substrate-system/routes": "^5.0.0",
+    "@substrate-system/routes": "^5.0.2",
     "@nichoth/components": "^0.16.16",
-    "@preact/signals": "^2.0.0",
+    "@preact/signals": "^2.0.1",
     "htm": "^3.1.1",
-    "ky": "^1.7.4",
-    "preact": "^10.25.4",
-    "route-event": "^6.0.0",
-    "stylelint": "^16.13.0"
+    "ky": "^1.7.5",
+    "preact": "^10.26.4",
+    "route-event": "^6.0.9"
   },
   "devDependencies": {
     "@substrate-system/debug": "^0.7.18",
@@ -40,11 +39,12 @@
     "eslint-config-standard": "^17.1.0",
     "netlify-cli": "^19.0.0",
     "postcss-nesting": "^13.0.1",
+    "stylelint": "^16.13.0",
     "stylelint-config-standard": "^37.0.0",
     "tap-spec": "^5.0.0",
     "tape-run": "^11.0.0",
-    "typescript": "^5.7.3",
-    "vite": "^6.0.7"
+    "typescript": "^5.8.2",
+    "vite": "^6.2.2"
   },
   "author": "nichoth <nichoth@nichoth.com> (https://nichoth.com)"
 }
