--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,11 @@ updates:
     # Check the npm registry for updates every day (weekdays)
     schedule:
       interval: "weekly"
+    groups:
+      # This is the name of your group. It will be used in PR titles and branch names
+      dev-dependencies:
+        patterns:
+          - "*"
     ignore:
       - dependency-name: "eslint"
         update-types: ["version-update:semver-major"]
