--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,12 @@
   ],
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/consistent-type-imports": [
+      "error",
+      {
+        "prefer": "type-imports"
+      }
+    ],
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
