--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -6,7 +6,7 @@ jobs:
   build:
 
     runs-on: ubuntu-22.04
-    timeout-minutes: 5
+    timeout-minutes: 10
 
     strategy:
       matrix:
@@ -25,7 +25,17 @@ jobs:
         npm run lint
       env:
         CI: true
-    - name: Run tape tests
+    - name: Run tap tests
       run: |
-        npm run build-tests
-        xvfb-run --server-args="-screen 0 1920x1080x24" npm run test-tape-run
+        xvfb-run --server-args="-screen 0 1920x1080x24" npm test
+    - name: Install Playwright browsers
+      run: npx playwright install --with-deps
+    - name: Run accessibility tests
+      run: npm run test-a11y
+    - name: Upload Playwright report
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
