--- a/package.json
+++ b/package.json
@@ -6,43 +6,51 @@
   "scripts": {
     "lint": "eslint \"./**/*.{ts,js}\"",
     "build-tests": "esbuild test/index.ts --bundle --format=cjs --keep-names > test/test-bundle.js",
-    "test": "npm run lint && npm run build && npm run build-tests && npm run test-tape-run",
-    "test-tape-run": "cat test/index.html | npx tape-run --input=html --static=test | npx tap-spec",
+    "test": "esbuild ./test/index.ts --bundle --keep-names | tapout",
+    "test-a11y": "playwright test",
+    "test-a11y:ui": "playwright test --ui",
+    "test-a11y:headed": "playwright test --headed",
+    "test-a11y:debug": "playwright test --debug",
+    "test-all": "npm run test && npm run test-a11y",
     "build": "mkdir -p ./public && rm -rf ./public/* && vite build",
-    "start": "concurrently --kill-others \"npx ntl functions:serve --port=9999 --debug\" \"npx vite\"",
+    "start": "concurrently --kill-others \"npx ntl functions:serve --port=9999\" \"npx vite\"",
     "preversion": "npm run lint",
     "version": "auto-changelog --template keepachangelog --breaking-pattern 'BREAKING CHANGE' && git add CHANGELOG.md",
     "postversion": "git push --follow-tags",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@substrate-system/routes": "^5.0.2",
-    "@nichoth/components": "^0.16.16",
     "@preact/signals": "^2.0.1",
+    "@substrate-system/css-normalize": "^0.0.13",
+    "@substrate-system/routes": "^5.0.2",
     "htm": "^3.1.1",
-    "ky": "^1.7.5",
-    "preact": "^10.26.4",
-    "route-event": "^7.1.1"
+    "ky": "^1.14.1",
+    "preact": "^10.28.0",
+    "route-event": "^7.4.0"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.0",
+    "@netlify/functions": "^5.1.1",
+    "@playwright/test": "^1.57.0",
+    "@preact/preset-vite": "^2.10.2",
     "@substrate-system/debug": "^0.9.0",
+    "@substrate-system/tapout": "^0.0.30",
     "@substrate-system/tapzero": "^0.10.15",
-    "@netlify/functions": "^5.0.1",
-    "@preact/preset-vite": "^2.9.4",
+    "@substrate-system/wait-on": "^8.0.3",
+    "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "auto-changelog": "^2.4.0",
+    "browserslist": "^4.28.1",
     "concurrently": "^9.0.1",
-    "cssnano": "^7.0.6",
     "esbuild": "^0.27.0",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
-    "netlify-cli": "^23.4.3",
-    "postcss-nesting": "^13.0.1",
+    "lightningcss": "^1.30.2",
+    "netlify-cli": "^22.1.3",
     "stylelint": "^16.13.0",
     "stylelint-config-standard": "^39.0.0",
     "tap-spec": "^5.0.0",
-    "tape-run": "^11.0.0",
     "typescript": "^5.8.2",
     "vite": "^7.0.0"
   },
