Better style, updates

--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   },
   "dependencies": {
     "@preact/signals": "^2.0.1",
+    "@substrate-system/a11y": "^0.0.17",
     "@substrate-system/css-normalize": "^0.0.13",
-    "@substrate-system/routes": "^5.0.2",
+    "@substrate-system/routes": "^5.0.4",
     "htm": "^3.1.1",
     "ky": "^1.14.1",
     "preact": "^10.28.0",
